fixing nav on mobile

--- a/src/components/Navigation/MainHeader.module.css
+++ b/src/components/Navigation/MainHeader.module.css
@@ -62,7 +62,7 @@
 .nav ul li {
     list-style: none;
     font-size: 1.3rem;
-    padding-left: 2rem;
+    padding: 0 1rem;
     text-transform: uppercase;
 }
 
